care/force-app/main/default/objects/SLA__c/SLA__c.object-meta.xml
<CustomObject>
    <description>SFORCE-2239
SLA fields and sections on WPS record types</description>
    <label>SLA</label>
    <nameField>
        <label>Performance Guarantee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>