care/force-app/main/default/objects/SLA__c/fields/Frequency_of_SLA_Reports_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_SLA_Reports_to_Client__c</fullName>
    <description>SFORCE-2239
SLA fields and sections on WPS record types</description>
    <label>Frequency of SLA Reports to Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Every 6 months</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>