care/force-app/main/default/objects/SLA__c/fields/If_Other_frequency_or_no_report_required__c.field-meta.xml
<CustomField>
    <fullName>If_Other_frequency_or_no_report_required__c</fullName>
    <description>SFORCE-2239
SLA fields and sections on WPS record types</description>
    <label>If Other frequency or no report required</label>
    <type>TextArea</type>
</CustomField>