care/force-app/main/default/objects/SLA__c/fields/Performance_Guarantee_Type__c.field-meta.xml
<CustomField>
    <fullName>Performance_Guarantee_Type__c</fullName>
    <description>SFORCE-2239
SLA fields and sections on WPS record types</description>
    <label>SLA Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIG email performance/availability</fullName>
            </value>
            <value>
                <fullName>BUC email performance/availability</fullName>
            </value>
            <value>
                <fullName>BUC telephony performance/call center availability</fullName>
            </value>
            <value>
                <fullName>BUC request average response time</fullName>
            </value>
            <value>
                <fullName>BUC customer satisfaction</fullName>
            </value>
            <value>
                <fullName>BUC fill rate</fullName>
            </value>
            <value>
                <fullName>SCP email performance/availability</fullName>
            </value>
            <value>
                <fullName>SCP telephony performance/call center availability</fullName>
            </value>
            <value>
                <fullName>SCP request average response time</fullName>
            </value>
            <value>
                <fullName>SCP customer satisfaction</fullName>
            </value>
            <value>
                <fullName>Site uptime</fullName>
            </value>
            <value>
                <fullName>Usage Reports Availability and Accuracy</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>